# RustSPICE

./: .copilotignore  .dockerignore  .editorconfig  .gitignore  ADDITIONAL_TOOLS_SUMMARY.md  CONVERSION_TOOLS.md  CSPICE_CONVERSION_STRATEGY.md  CSPICE_INTEGRATION.md  Cargo.toml  IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PHASE8_IMPLEMENTATION_TRACKER.md  PHASE8_WEEK1_COMPLETION_REPORT.md  PHASE_1_3_REVIEW_SUMMARY.md  PHASE_1_FOUNDATION_COMPLETE.md  PHASE_2_COMPLETE_FINAL_REPORT.md  PHASE_2_TIME_SYSTEM_COMPLETE.md  PHASE_3_COORDINATE_SYSTEM_COMPLETE.md  PROGRESS_SUMMARY.md  README.md  RustSPICE.code-workspace  TESTING_FRAMEWORK.md  TYPESCRIPT_INTEGRATION.md  analyze-cspice.sh  analyze-repo.sh  build-cspice-wasm.sh  build.rs  build.sh  check-optimization.sh  complete-phase2-time-system.sh  demo.html  grok-conversation-explore.md  grok-conversation-think.md  package.json  run_tests.sh  setup-phase1-foundation.sh  setup-phase2-time-system.sh  setup-phase3-coordinates.sh  tsconfig.json  validate_against_cspice.sh  (+1 more)
analysis/: analyze_dependencies.py  conversion_progress.md  file_sizes.txt  function_dependencies.txt  priority_functions.txt
benches/: ephemeris_benchmark.rs
kernels/: standard.mk
src/: advanced_math.rs  body_data.rs  ck_reader.rs  comprehensive_tests.rs  coordinates.rs  ephemeris.rs  error_handling.rs  file_system.rs  foundation.rs  kernel_pool.rs  kernel_system.rs  lib.rs  lib_minimal_working.rs  math_core.rs  spk_reader.rs  time_system.rs  wasm_bindings.rs
tests/: phase8_integration_tests.rs  phase8_week6_final.rs  phase8_week6_integration.rs  phase8_week6_simple.rs  property_tests.rs  snapshot_tests.rs  typescript_integration.test.ts
