[package]
name = "rust-spice"
version = "0.1.0"
edition = "2021"
authors = ["RustSPICE Contributors"]
description = "Complete Rust implementation of NASA's SPICE toolkit for WebAssembly - Full CSPICE conversion"
license = "CC0-1.0"
repository = "https://github.com/Jthora/RustSPICE"
keywords = ["space", "astronomy", "nasa", "spice", "ephemeris"]
categories = ["science", "mathematics", "aerospace", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[dependencies]
# Core dependencies for no_std compatibility - essential for WASM
# No external math libraries - we implement everything from scratch for accuracy
libm = "0.2"  # Math functions for no_std

# WASM dependencies - only when targeting wasm32
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
js-sys = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
  "Document",
  "Element", 
  "HtmlElement",
  "Window",
]

# Development dependencies for testing against CSPICE reference
[dev-dependencies]
approx = "0.5"      # For floating point comparisons in tests
criterion = "0.5"   # For performance benchmarking

# WASM testing
wasm-bindgen-test = "0.3"

# Target-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Profile optimizations for WASM
[profile.release]
opt-level = 3           # Maximum optimization for numerical accuracy
lto = true              # Link-time optimization
codegen-units = 1       # Single code generation unit for better optimization
panic = "abort"         # Smaller WASM size
strip = true            # Remove debug symbols

[profile.dev]
opt-level = 0           # Fast compilation for development
debug = 2               # Full debug info
panic = "abort"         # Consistent with release

# Benchmark profile for performance testing against CSPICE
[profile.bench]
opt-level = 3
debug = true
lto = true

# Optimize dependencies even in debug builds for numerical consistency
[profile.dev.package."*"]
opt-level = 1
